syntax = "proto3";

package hi;

service HiService {
  rpc SayHi (HiRequest) returns (HiReply) {}
}

message HiRequest {
  string name = 1;
}

message HiReply {
  string message = 1;
}